# YT-COPILOT-V2

./: .gitignore  CLAUDE.md  README.md  config.yml.example  pyproject.toml  restart.bat
.claude/: settings.json
agents/: niche_explorer.py  outlier_discovery.py  research_scraper.py  thumbnail_style.py  title_pattern.py  trend_detector.py
channels/profiles/: ai-hustler.yml  crime-files.yml  default.yml
cli/: config.py  main.py
cli/commands/: agents.py  generate.py  produce.py  reverse.py  scrape.py  studio.py
compositing/: effects.py  safe_zone.py  text_overlay.py
core/: analyzer.py  bookmarks.py  channel_dna_synth.py  channel_summary.py  channel_text_dna.py  concept_planner.py  data_rules.py  idea_generator.py  logo_gen.py  outliers.py  pairing_validator.py  profile_loader.py  prompt_engine.py  refresh_template_examples.py  registry_seeder.py  scene_generator.py  script_analyzer.py  seed_templates.py  session_stats.py  sketch_reader.py  style_channel.py  style_resolver.py  template_analyzer.py  text_extractor.py  title_generator.py  trackers.py  weekly_scan.py
core/produce/: __init__.py  assembler.py  elevenlabs.py  gate.py  image_gen.py  kenburns.py  pipeline.py  project.py  script_gen.py  vo_gen.py
data/: db.py
generators/: claude_text.py  gcp_auth.py  gemini_client.py  gemini_text.py  pipeline.py  quality_gate.py  refiner.py
preview/: mockup.py
scraper/: cache_manager.py  channels_registry.yml  outlier_scorer.py  pipeline.py  registry_manager.py  thumbnail_analyzer.py  thumbnail_downloader.py  youtube_scraper.py
studio/: server.py
(+59 files in other folders)
